--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,3 +1,120 @@
+@import "../../global.scss";
+
 .intro {
-    background-color: lightpink;
+    background-color: white;
+    display: flex;
+
+    @include mobile {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .left {
+        flex: 0.5;
+        overflow: hidden;
+
+        .imgContainer {
+            width: 700px;
+            height: 700px;
+            background-color: rgb(155, 154, 133);
+            border-radius: 50%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            float: right;
+
+            @include mobile {
+              align-items: start;
+            }
+
+            img {
+                height: 100%;
+
+                @include mobile {
+                  height: 50%;
+                }
+            }
+        }
+    }
+    .right {
+        flex: 0.5;
+        position: relative;
+
+        .wrapper {
+            width: 100%;
+            height: 100%;
+            padding-left: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            @include mobile {
+              padding-left: 0;
+              align-items: center;
+            }
+
+            h1 {
+                font-size: 60px;
+                margin: 10px 0;
+
+                @include mobile {
+                  font-size: 40px;
+                }
+            }
+            h2 {
+                font-size: 35px;
+                
+            }
+            h3 {
+                font-size: 30px;
+
+                @include mobile {
+                  font-size: 20px;
+                }
+
+                .typing-animation {
+                    font-size: inherit;
+                    color: crimson;
+                    animation: typing 3s steps(30), blink 0.5s step-end infinite alternate;
+                  }
+          
+                  @keyframes typing {
+                    from {
+                      width: 0;
+                    }
+                    to {
+                      width: 100%;
+                    }
+                  }
+          
+                  @keyframes blink {
+                    0%,
+                    100% {
+                      border-color: transparent;
+                    }
+                    50% {
+                      border-color: crimson;
+                    }
+                  }
+          
+                  
+            }
+        }
+        a {
+            position: absolute;
+            bottom: 10px;
+            left: 40%;
+
+            img {
+                width: 30px;
+                animation: arrowBlink 2s infinite;
+            }
+
+            @keyframes arrowBlink {
+                100% {
+                    opacity: 0;
+                }
+            }
+        }
+    }
 }
